--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,10 @@ repositories {
 
 dependencies {
     testImplementation (
+            "io.rest-assured:rest-assured:5.3.0",
             'com.codeborne:selenide:6.10.3',
-            'org.junit.jupiter:junit-jupiter:5.9.0'
+            'org.junit.jupiter:junit-jupiter:5.9.0',
+            'com.codeborne:xls-test:1.4.3'
     )
 }
 
