--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,52 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.10.0'
+    id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 repositories {
     mavenCentral()
 }
 
+def allureVersion = "2.19.0",
+    assertJVersion = "3.23.1",
+    slf4jVersion = "1.7.32"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
+}
+
 dependencies {
-    testImplementation (
-            "io.rest-assured:rest-assured:5.3.0",
-            'com.codeborne:selenide:6.10.3',
-            'org.junit.jupiter:junit-jupiter:5.9.0',
-            'com.codeborne:xls-test:1.4.3'
+    testImplementation(
+            "io.rest-assured:rest-assured:4.3.3",
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
+            'com.fasterxml.jackson.core:jackson-databind:2.14.0',
+            "org.assertj:assertj-core:$assertJVersion",
+            "org.junit.jupiter:junit-jupiter:5.9.0",
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            'org.projectlombok:lombok:1.18.24'
+
     )
 }
 
-test {
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
