--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,9 @@ dependencies {
             "org.assertj:assertj-core:$assertJVersion",
             "org.junit.jupiter:junit-jupiter:5.9.0",
             "org.slf4j:slf4j-simple:$slf4jVersion",
-            'org.projectlombok:lombok:1.18.24'
+            'org.projectlombok:lombok:1.18.24',
+            'com.codeborne:xls-test:1.4.1',
+            'com.codeborne:selenide:6.11.0'
 
     )
 }
